--- a/inst/scripts/ref.bib
+++ b/inst/scripts/ref.bib
@@ -9,22 +9,7 @@
   publisher={Nature Publishing Group}
 }
 
-@dataset{chen_yunshun_2017_1052871,
-  author       = {Chen, Yunshun and
-                  Pal, Bhupinder and
-                  Visvader, Jane E and
-                  Smyth, Gordon K},
-  title        = {{Data and code for "Differential methylation
-                   analysis of reduced representation bisulfite
-                   sequencing experiments using edgeR"}},
-  month        = nov,
-  year         = 2017,
-  publisher    = {Zenodo},
-  doi          = {10.5281/zenodo.1052871},
-  url          = {https://doi.org/10.5281/zenodo.1052871}
-}
-
-@Article{chen2017mammary,
+@article{chen2017mammary,
 AUTHOR = { Chen, Y and Pal, B and Visvader, JE and Smyth, GK},
 TITLE = {Differential methylation analysis of reduced representation bisulfite sequencing experiments using edgeR [version 2; peer review: 2 approved, 1 approved with reservations]
 },
